# cyli

./: README.md  cyli.example.json  cyli.example.yarn.json  main.py  pyproject.toml
src/cyli/: __init__.py  cli.py  config.py
src/cyli/commands/: __init__.py  hello.py  test.py
src/cyli/core/: __init__.py  cypress.py
src/cyli/utils/: __init__.py  files.py
