[project]
name = "cyli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Romain Clemencon", email = "redacted@domain.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "textual>=3.0.0",
]

[project.scripts]
cyli = "cyli.cli:cli"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
